# SPDX-FileCopyrightText: The kube-custom-resources-rs Authors
# SPDX-License-Identifier: 0BSD

[package]
name = "kube-custom-resources-rs"
version = "9999.99.99"
description = "Kubernetes Custom Resource Bindings"
authors = ["Sebastian Hoß <seb@hoß.de>"]
edition = "2021"
license = "0BSD"
keywords = ["kubernetes", "custom-resources"]
categories = ["api-bindings"]
homepage = "https://github.com/metio/kube-custom-resources-rs/"
repository = "https://github.com/metio/kube-custom-resources-rs"
readme = "../README.md"

[dependencies]
kube = { version = "0.89.0", features = ["derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
schemars = { version = "0.8.16" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }

[features]
about_k8s_io = []
acid_zalan_do = []
acme_cert_manager_io = []
acmpca_services_k8s_aws = []
actions_github_com = []
actions_summerwind_dev = []
addons_cluster_x_k8s_io = []
agent_k8s_elastic_co = []
anywhere_eks_amazonaws_com = []
api_clever_cloud_com = []
api_kubemod_io = []
apicodegen_apimatic_io = []
apiextensions_crossplane_io = []
apigatewayv2_services_k8s_aws = []
apisix_apache_org = []
apm_k8s_elastic_co = []
app_kiegroup_org = []
app_lightbend_com = []
app_redislabs_com = []
app_terraform_io = []
application_networking_k8s_aws = []
applicationautoscaling_services_k8s_aws = []
appmesh_k8s_aws = []
appprotect_f5_com = []
appprotectdos_f5_com = []
apps_3scale_net = []
apps_clusternet_io = []
apps_emqx_io = []
apps_gitlab_com = []
apps_kubeblocks_io = []
apps_kubedl_io = []
apps_kubeedge_io = []
apps_m88i_io = []
apps_redhat_com = []
aquasecurity_github_io = []
argoproj_io = []
asdb_aerospike_com = []
atlasmap_io = []
auth_ops42_org = []
authorization_openshift_io = []
authzed_com = []
autoscaling_k8s_io = []
autoscaling_karmada_io = []
awx_ansible_com = []
azure_microsoft_com = []
b3scale_infra_run = []
batch_volcano_sh = []
beat_k8s_elastic_co = []
beegfs_csi_netapp_com = []
binding_operators_coreos_com = []
bitnami_com = []
bmc_tinkerbell_org = []
boskos_k8s_io = []
bpfd_dev = []
bus_volcano_sh = []
cache_kubedl_io = []
caching_ibm_com = []
camel_apache_org = []
canaries_flanksource_com = []
capabilities_3scale_net = []
capsule_clastix_io = []
cassandra_datastax_com = []
ceph_rook_io = []
cert_manager_io = []
chaos_mesh_org = []
chaosblade_io = []
charts_amd_com = []
charts_flagsmith_com = []
charts_helm_k8s_io = []
charts_opdev_io = []
charts_operatorhub_io = []
che_eclipse_org = []
chisel_operator_io = []
cilium_io = []
claudie_io = []
cloud_network_openshift_io = []
cloudformation_linki_space = []
cloudfront_services_k8s_aws = []
cloudtrail_services_k8s_aws = []
cloudwatch_aws_amazon_com = []
cloudwatch_services_k8s_aws = []
cloudwatchlogs_services_k8s_aws = []
cluster_clusterpedia_io = []
cluster_ipfs_io = []
cluster_x_k8s_io = []
clusters_clusternet_io = []
clustertemplate_openshift_io = []
confidentialcontainers_org = []
config_gatekeeper_sh = []
config_grafana_com = []
config_karmada_io = []
config_koordinator_sh = []
config_openshift_io = []
console_openshift_io = []
control_k8ssandra_io = []
controlplane_operator_openshift_io = []
core_kubeadmiral_io = []
core_linuxsuren_github_com = []
core_openfeature_dev = []
couchbase_com = []
craftypath_github_io = []
crane_konveyor_io = []
crd_projectcalico_org = []
data_fluid_io = []
databases_schemahero_io = []
databases_spotahome_com = []
datadoghq_com = []
dataprotection_kubeblocks_io = []
designer_kaoto_io = []
devices_kubeedge_io = []
devops_kubesphere_io = []
dex_coreos_com = []
dex_gpu_ninja_com = []
digitalis_io = []
documentdb_services_k8s_aws = []
druid_apache_org = []
dynamodb_services_k8s_aws = []
ec2_services_k8s_aws = []
ecr_services_k8s_aws = []
efs_services_k8s_aws = []
eks_services_k8s_aws = []
elasticache_services_k8s_aws = []
elasticsearch_k8s_elastic_co = []
elbv2_k8s_aws = []
emrcontainers_services_k8s_aws = []
ensembleoss_io = []
enterprisesearch_k8s_elastic_co = []
everest_percona_com = []
example_openshift_io = []
execution_furiko_io = []
executor_testkube_io = []
expansion_gatekeeper_sh = []
extensions_istio_io = []
extensions_kubeblocks_io = []
external_secrets_io = []
externaldata_gatekeeper_sh = []
externaldns_k8s_io = []
externaldns_nginx_org = []
flagger_app = []
flink_apache_org = []
flow_volcano_sh = []
flows_netobserv_io = []
fluentbit_fluent_io = []
fluentd_fluent_io = []
flux_framework_org = []
forklift_konveyor_io = []
fossul_io = []
gateway_networking_k8s_io = []
gateway_nginx_org = []
getambassador_io = []
gitops_hybrid_cloud_patterns_io = []
grafana_integreatly_org = []
groupsnapshot_storage_k8s_io = []
hazelcast_com = []
helm_openshift_io = []
helm_sigstore_dev = []
helm_toolkit_fluxcd_io = []
hive_openshift_io = []
hiveinternal_openshift_io = []
hnc_x_k8s_io = []
hyperfoil_io = []
iam_services_k8s_aws = []
ibmcloud_ibm_com = []
image_toolkit_fluxcd_io = []
imageregistry_operator_openshift_io = []
imaging_ingestion_alvearie_org = []
inference_kubedl_io = []
infinispan_org = []
infra_contrib_fluxcd_io = []
infrastructure_cluster_x_k8s_io = []
ingress_operator_openshift_io = []
insights_openshift_io = []
install_istio_io = []
installation_mattermost_com = []
integration_rock8s_com = []
iot_eclipse_org = []
ipam_cluster_x_k8s_io = []
isindir_github_com = []
jaegertracing_io = []
jobset_x_k8s_io = []
jobsmanager_raczylo_com = []
k6_io = []
k8gb_absa_oss = []
k8s_keycloak_org = []
k8s_nginx_org = []
k8s_otterize_com = []
k8up_io = []
kafka_services_k8s_aws = []
kafka_strimzi_io = []
kamaji_clastix_io = []
karpenter_k8s_aws = []
karpenter_sh = []
keda_sh = []
keycloak_k8s_reddec_net = []
keycloak_org = []
keyspaces_services_k8s_aws = []
kibana_k8s_elastic_co = []
kinesis_services_k8s_aws = []
kms_services_k8s_aws = []
kuadrant_io = []
kube_green_com = []
kubean_io = []
kubecost_com = []
kubevious_io = []
kueue_x_k8s_io = []
kuma_io = []
kustomize_toolkit_fluxcd_io = []
kyverno_io = []
lambda_services_k8s_aws = []
lerentis_uploadfilter24_eu = []
limitador_kuadrant_io = []
litmuschaos_io = []
logging_banzaicloud_io = []
logging_extensions_banzaicloud_io = []
loki_grafana_com = []
longhorn_io = []
m4e_krestomat_io = []
machine_openshift_io = []
machineconfiguration_openshift_io = []
maps_k8s_elastic_co = []
mariadb_mmontes_io = []
mattermost_com = []
memorydb_services_k8s_aws = []
metacontroller_k8s_io = []
metal3_io = []
microcks_github_io = []
minio_min_io = []
mirrors_kts_studio = []
model_kubedl_io = []
monitoring_coreos_com = []
monitoring_openshift_io = []
monocle_monocle_change_metrics_io = []
mq_services_k8s_aws = []
multicluster_crd_antrea_io = []
multicluster_x_k8s_io = []
mutations_gatekeeper_sh = []
nativestor_alauda_io = []
netchecks_io = []
network_openshift_io = []
network_operator_openshift_io = []
networkfirewall_services_k8s_aws = []
networking_gke_io = []
networking_istio_io = []
networking_k8s_aws = []
networking_karmada_io = []
nfd_k8s_sigs_io = []
nfd_kubernetes_io = []
nodeinfo_volcano_sh = []
notebook_kubedl_io = []
notification_toolkit_fluxcd_io = []
objectbucket_io = []
onepassword_com = []
opensearchservice_services_k8s_aws = []
opentelemetry_io = []
operations_kubeedge_io = []
operator_aquasec_com = []
operator_authorino_kuadrant_io = []
operator_cluster_x_k8s_io = []
operator_cryostat_io = []
operator_open_cluster_management_io = []
operator_openshift_io = []
operator_shipwright_io = []
operator_tekton_dev = []
operator_tigera_io = []
operator_victoriametrics_com = []
oracle_db_anthosapis_com = []
org_eclipse_che = []
organizations_services_k8s_aws = []
pgv2_percona_com = []
pipes_services_k8s_aws = []
pkg_crossplane_io = []
platform_openshift_io = []
policy_clusterpedia_io = []
policy_karmada_io = []
postgres_operator_crunchydata_com = []
postgresql_cnpg_io = []
projectcontour_io = []
prometheusservice_services_k8s_aws = []
ps_percona_com = []
psmdb_percona_com = []
pxc_percona_com = []
quay_redhat_com = []
quota_codeflare_dev = []
quota_openshift_io = []
ray_io = []
rbacmanager_reactiveops_io = []
rc_app_stacks = []
rds_services_k8s_aws = []
redhatcop_redhat_io = []
registry_apicur_io = []
registry_devfile_io = []
reliablesyncs_kubeedge_io = []
repo_manager_pulpproject_org = []
resources_teleport_dev = []
rocketmq_apache_org = []
route53_services_k8s_aws = []
route53resolver_services_k8s_aws = []
route_openshift_io = []
rules_kubeedge_io = []
runtime_cluster_x_k8s_io = []
s3_services_k8s_aws = []
s3_snappcloud_io = []
sagemaker_services_k8s_aws = []
samples_operator_openshift_io = []
scheduling_koordinator_sh = []
scheduling_sigs_k8s_io = []
scheduling_volcano_sh = []
schemas_schemahero_io = []
scylla_scylladb_com = []
secretgenerator_mittwald_de = []
secrets_crossplane_io = []
secrets_doppler_com = []
secrets_hashicorp_com = []
secrets_store_csi_x_k8s_io = []
secretsmanager_services_k8s_aws = []
secscan_quay_redhat_com = []
security_internal_openshift_io = []
security_istio_io = []
security_openshift_io = []
security_profiles_operator_x_k8s_io = []
sematext_com = []
servicebinding_io = []
services_k8s_aws = []
serving_kubedl_io = []
sfn_services_k8s_aws = []
sharedresource_openshift_io = []
site_superedge_io = []
slo_koordinator_sh = []
sloth_slok_dev = []
snapscheduler_backube = []
snapshot_storage_k8s_io = []
sns_services_k8s_aws = []
sonataflow_org = []
source_toolkit_fluxcd_io = []
sparkoperator_k8s_io = []
spv_no = []
sqs_services_k8s_aws = []
status_gatekeeper_sh = []
storage_kubeblocks_io = []
sts_min_io = []
stunner_l7mp_io = []
submariner_io = []
telemetry_istio_io = []
templates_gatekeeper_sh = []
tempo_grafana_com = []
temporal_io = []
tests_testkube_io = []
theketch_io = []
tinkerbell_org = []
topology_node_k8s_io = []
topolvm_cybozu_com = []
traefik_io = []
training_kubedl_io = []
trident_netapp_io = []
trust_cert_manager_io = []
upgrade_cattle_io = []
upgrade_managed_openshift_io = []
velero_io = []
virt_virtink_smartx_com = []
volsync_backube = []
vpcresources_k8s_aws = []
wgpolicyk8s_io = []
wildfly_org = []
work_karmada_io = []
workload_codeflare_dev = []
workloads_kubeblocks_io = []
zonecontrol_k8s_aws = []
zookeeper_pravega_io = []
