# SPDX-FileCopyrightText: The kube-custom-resources-rs Authors
# SPDX-License-Identifier: 0BSD

[package]
name = "kcr_apm_k8s_elastic_co"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }

[dev-dependencies]
k8s-openapi = { workspace = true, features = ["v1_31"] }

[package.metadata.docs.rs]
features = ["k8s-openapi/v1_31"]

[features]
default = ["v1", "v1beta1"]
v1 = []
v1beta1 = []
