# SPDX-FileCopyrightText: The kube-custom-resources-rs Authors
# SPDX-License-Identifier: 0BSD

[package]
name = "kcr_gateway_networking_x_k8s_io"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
schemars = { version = "~1" }
serde = { version = "~1" }
serde_json = { version = "~1" }
k8s-openapi = { version = "~0" }
kube = { version = "~2", default-features = false, features = ["derive"] }

[dev-dependencies]
k8s-openapi = { version = "~0", features = ["v1_34"] }

[package.metadata.docs.rs]
features = ["k8s-openapi/v1_34"]

[features]
default = ["v1alpha1"]
v1alpha1 = []
