# SPDX-FileCopyrightText: The kube-custom-resources-rs Authors
# SPDX-License-Identifier: 0BSD

[package]
name = "kcr_networking_istio_io"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
schemars = { version = "~0" }
serde = { version = "~1" }
serde_json = { version = "~1" }
k8s-openapi = { version = "~0" }
kube = { version = "~1", default-features = false, features = ["derive"] }

[dev-dependencies]
k8s-openapi = { version = "~0", features = ["v1_33"] }

[package.metadata.docs.rs]
features = ["k8s-openapi/v1_33"]

[features]
default = ["v1", "v1alpha3", "v1beta1"]
v1 = []
v1alpha3 = []
v1beta1 = []
